# users-service

./: .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/users_service/: app.py  db.py  main.py  models.py  tasks.py
tests/: test_app.py
