[tool.poetry]
name = "users-service"
version = "0.1.0"
description = ""
authors = ["ozzs <ozz.shaf@gmail.com>"]
readme = "README.md"
packages = [{include = "users_service", from = "src"}]

[tool.poetry.scripts]
serve = 'users_service.main:run'

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
sqlmodel = "^0.0.8"
uvicorn = "^0.20.0"
asyncpg = "^0.27.0"
sqlalchemy = {version = "1.4.41", extras = ["asyncio"]}
celery = {version = "^5.2.7", extras = ["redis"]}
asgiref = "^3.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
httpx = "^0.23.1"
pytest-asyncio = "^0.20.3"
aiosqlite = "^0.17.0"
black = "^22.12.0"
isort = "^5.11.3"
mypy = "^0.991"
flake8 = "^6.0.0"
flake8-black = "^0.3.5"
flake8-import-order = "^0.18.2"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^22.12.6"
flake8-bandit = "^4.1.1"
flake8-annotations = "^2.9.1"
darglint = "^1.8.1"
pylint = "^2.15.8"
celery-types = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
force_sort_within_sections = true
group_by_package = true
lexicographical = true
line_length = 100
no_lines_before = ['LOCALFOLDER']
order_by_type = false
profile = "black"

[tool.black]
line-length = 100

[tool.mypy]
plugins = "pydantic.mypy"
show_error_codes = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "uvicorn",
  "pytest",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
